<?xml version="1.0"?>
<package format="2">
  <name>teleop_acker_joy</name>
  <version>1.0.0</version>
  <description>Generic joystick teleop for ackermann robots.</description>
  <maintainer email="accounts@pascalpieper.de">Dont-ask-Pascal</maintainer>

  <license>BSD</license>

  <url type="website">https://github.com/pilsbot/teleop_acker_joy</url>
  <author email="accounts@pascalpieper.de">Pascal Pieper</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>sensor_msgs</depend>
  <depend>ackermann_msgs</depend>

  <exec_depend>joy</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>launch_ros</test_depend>
  <test_depend>launch_testing_ament_cmake</test_depend>
  <test_depend>launch_testing_ros</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
